Simplify javacd.proto
Summary:
We have redundant encoding of the informatoin for APs/plugins in the proto message
for javacd. This changes it so that we derive one of those pieces of information from the
other. This makes it easier to encode that message for buck2's javacd integration.

Reviewed By: IanChilds

fbshipit-source-id: d3f04de3f5cb1217a698b3a9210c9fe7c47a4e28